--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
+    "react-spring": "^9.4.4",
+    "react-typical": "^0.1.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^8.1.1"
+    "swiper": "^8.1.1",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
